--- a/src/main/java/ch/dams333/mercure/core/commands/utils/MercureCommands.yml
+++ b/src/main/java/ch/dams333/mercure/core/commands/utils/MercureCommands.yml
@@ -42,3 +42,12 @@ reload:
     - "!reload - Recharge entièrement les plugins"
   aliases:
     - rl
+message:
+  description: "Envoie un message"
+  permissions:
+    - user
+  format:
+    - "!message <bot name> <channel ID> <message>"
+  aliases:
+    - msg
+    - send
